--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -119,6 +119,9 @@ body{background-color:#f4f7f2}
 .about-quote{
   position:relative;
   padding-left:1.75rem;
+  text-align:justify;
+  text-justify:inter-word;
+  hyphens:auto;
 }
 
 .about-quote::before{
